--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                         <img src="assets/images/newlogo-298x108.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-sU6ByEXVFk mbr-fullscreen mbr-parallax-background" id="header2-q">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="cid-sU6ByEXVFk mbr-fullscreen mbr-parallax-background" id="header2-q">
 
     
 
@@ -505,7 +505,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FNQTTvX/X6SdFC6aWjFEhp4tF7hsIaOclUK6t5HCFwclwwTcGhkqCNrtqbJqQpmdwU/X94KRfWjsnV9UyocgQxWyMY6lzqUEwGJoE9XqdNF3wGgaRHUy7aTdroIVwKjp">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZhIwGcTjQs+JJ+AIIC6Dg/IvlERLvdc2sGdDoAjHJtouWFBkybzBbzRjfn9uRF+cCUY09qljrdI3U3ZHBF+k0I+/Hsz3nPu5y2EWjVfpWHdghLoUwRw2A14p6L7gFo/B">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
